--- a/index.html
+++ b/index.html
@@ -8,239 +8,225 @@
   <meta name="description" content="Explore why this plant-based ingredient is getting attention." />
 
   <style>
-    :root {
-      --bg: #0f2f28;
-      --text: #111;
-      --muted: #555;
-      --btn: #2f7d32;
-      --btn-hover: #1b5e20;
-      --accent: #4caf50;
-      --light-bg: #f6fff6;
+    :root{
+      --bg:#0f2f28;
+      --text:#111;
+      --muted:#555;
+      --btn:#2f7d32;
+      --btn-hover:#1b5e20;
+      --accent:#4caf50;
+      --light-bg:#f6fff6;
     }
 
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    *{box-sizing:border-box;margin:0;padding:0}
 
-    body {
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-      background: #fff;
-      color: var(--text);
-      line-height: 1.6;
+    body{
+      font-family:Arial,"Helvetica Neue",Helvetica,sans-serif;
+      background:#fff;
+      color:var(--text);
+      line-height:1.6;
     }
 
     /* Top Bar - Compliance */
-    .topbar {
-      background: #f4f4f4;
-      padding: 12px 15px;
-      text-align: center;
-      font-size: 14px;
-      line-height: 1.35;
-      border-bottom: 1px solid #ddd;
+    .topbar{
+      background:#f4f4f4;
+      padding:12px 15px;
+      text-align:center;
+      font-size:14px;
+      line-height:1.35;
+      border-bottom:1px solid #ddd;
     }
-    .topbar strong { color: #d32f2f; }
+    .topbar strong{color:#d32f2f}
+
+    /* SPONSORED label (must be visible in first fold) */
+    .sponsored-label{
+      width:100%;
+      text-align:center;
+      font-size:12px;
+      font-weight:700;
+      letter-spacing:1px;
+      color:#fff;
+      background:#2f7d32;
+      padding:6px 0;
+      text-transform:uppercase;
+    }
 
     /* Container */
-    .wrap {
-      max-width: 980px;
-      margin: 0 auto;
-      padding: 20px 15px;
+    .wrap{
+      max-width:980px;
+      margin:0 auto;
+      padding:18px 15px 26px;
     }
 
-    /* Hero Section */
-    .hero {
-      border-radius: 16px;
-      overflow: hidden;
-      background: var(--bg);
-      display: flex;
-      align-items: stretch;
-      min-height: 300px;
-      margin-bottom: 10px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.10);
+    /* Hero */
+    .hero{
+      border-radius:16px;
+      overflow:hidden;
+      background:var(--bg);
+      box-shadow:0 8px 20px rgba(0,0,0,.10);
+      margin:12px 0 18px;
     }
-    .hero img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
+    .hero img{
+      width:100%;
+      height:auto;
+      display:block;
+      object-fit:cover;
     }
 
     /* Content */
-    .content {
-      max-width: 780px;
-      margin: 0 auto;
-      font-size: 18px;
-      line-height: 1.65;
+    .content{
+      max-width:780px;
+      margin:0 auto;
+      font-size:18px;
+      line-height:1.65;
     }
 
-    h1 {
-      font-size: 34px;
-      line-height: 1.2;
-      margin: 22px 0 12px;
-      color: #0a261f;
-      text-align: center;
+    h1{
+      font-size:34px;
+      line-height:1.2;
+      margin:8px 0 10px;
+      text-align:center;
     }
 
-    .subtitle {
-      font-size: 19px;
-      color: var(--muted);
-      text-align: center;
-      margin-bottom: 26px;
-      font-weight: normal;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
+    .subtitle{
+      font-size:18px;
+      color:var(--muted);
+      text-align:center;
+      margin:0 auto 22px;
+      max-width:720px;
     }
 
-    p {
-      margin: 0 0 18px;
-      color: var(--muted);
+    p{
+      margin:0 0 16px;
+      color:var(--muted);
     }
 
-    /* Info Box (safe, no hard claims) */
-    .info {
-      background: var(--light-bg);
-      border-radius: 12px;
-      padding: 22px;
-      margin: 26px 0;
-      border-left: 4px solid var(--accent);
-    }
-    .info h2 {
-      color: #0a261f;
-      margin-bottom: 12px;
-      font-size: 24px;
-    }
-    .info ul { list-style: none; }
-    .info li {
-      padding: 9px 0 9px 32px;
-      position: relative;
-      font-size: 17px;
-      color: #2b2b2b;
-    }
-    .info li:before {
-      content: "•";
-      position: absolute;
-      left: 10px;
-      top: 6px;
-      color: var(--accent);
-      font-weight: bold;
-      font-size: 22px;
-      line-height: 1;
+    /* Info box */
+    .info{
+      background:var(--light-bg);
+      border:1px solid #d9f3dc;
+      border-left:4px solid var(--accent);
+      border-radius:12px;
+      padding:18px 18px;
+      margin:18px 0 22px;
     }
 
-    /* CTA Button */
-    .cta {
-      display: flex;
-      justify-content: center;
-      margin: 30px 0 10px;
-      flex-direction: column;
-      align-items: center;
+    .info h2{
+      font-size:20px;
+      margin:0 0 10px;
+      color:#0a261f;
     }
 
-    .cta a {
-      background: linear-gradient(to bottom, var(--btn), var(--btn-hover));
-      color: #fff;
-      text-decoration: none;
-      font-size: 22px;
-      padding: 18px 40px;
-      border-radius: 12px;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      font-weight: bold;
-      transition: all 0.25s ease;
-      box-shadow: 0 6px 0 #1b5e20, 0 10px 20px rgba(43,124,47,0.25);
-      cursor: pointer;
-      min-width: 280px;
+    .info ul{
+      padding-left:18px;
+      margin:0;
+    }
+    .info li{
+      margin:8px 0;
+      color:#2b2b2b;
     }
 
-    .cta a:hover {
-      transform: translateY(-2px);
-      filter: brightness(1.03);
-      box-shadow: 0 8px 0 #1b5e20, 0 12px 24px rgba(43,124,47,0.32);
+    /* CTA */
+    .cta{
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      margin:18px 0 18px;
+      gap:10px;
     }
 
-    .cta a:active {
-      transform: translateY(1px);
-      box-shadow: 0 4px 0 #1b5e20, 0 6px 12px rgba(43,124,47,0.22);
+    .cta a{
+      background:linear-gradient(to bottom,var(--btn),var(--btn-hover));
+      color:#fff;
+      text-decoration:none;
+      font-size:20px;
+      padding:16px 34px;
+      border-radius:12px;
+      font-weight:700;
+      box-shadow:0 6px 0 #1b5e20,0 10px 20px rgba(43,124,47,.20);
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      min-width:240px;
+      text-align:center;
+    }
+    .cta a:hover{filter:brightness(1.05)}
+    .cta-note{
+      font-size:12px;
+      color:#666;
+      text-align:center;
+      max-width:650px;
     }
 
-    .cta-note {
-      font-size: 13.5px;
-      color: #666;
-      text-align: center;
-      margin-top: 10px;
-      max-width: 640px;
+    .disclaimer{
+      font-size:13px;
+      color:#777;
+      text-align:left;
+      margin:22px 0;
+      padding:14px;
+      background:#f9f9f9;
+      border-radius:8px;
+      border-left:3px solid #ccc;
     }
 
-    .disclaimer {
-      font-size: 13px;
-      color: #777;
-      text-align: left;
-      margin: 24px 0;
-      padding: 14px;
-      background: #f9f9f9;
-      border-radius: 8px;
-      border-left: 3px solid #ccc;
+    hr{
+      border:none;
+      border-top:1px solid #e6e6e6;
+      margin:22px 0;
     }
 
-    hr {
-      border: none;
-      border-top: 1px solid #e6e6e6;
-      margin: 28px 0;
+    .footer{
+      font-size:14px;
+      text-align:center;
+      padding:10px 0 16px;
+      color:#666;
     }
-
-    /* Footer */
-    .footer {
-      font-size: 14px;
-      text-align: center;
-      padding: 10px 0 26px;
-      color: #666;
+    .footer a{
+      color:#444;
+      text-decoration:none;
+      margin:0 10px;
     }
-    .footer a {
-      color: #444;
-      text-decoration: none;
-      margin: 0 10px;
-    }
-    .footer a:hover { text-decoration: underline; color: #000; }
-
-    .copyright {
-      font-size: 13px;
-      margin-top: 14px;
+    .footer a:hover{text-decoration:underline;color:#000}
+    .copyright{
+      font-size:13px;
+      margin-top:14px;
     }
 
     /* Responsive */
-    @media (max-width: 768px) {
-      h1 { font-size: 28px; }
-      .subtitle { font-size: 17px; }
-      .content { font-size: 17px; }
-      .cta a { font-size: 20px; padding: 16px 30px; min-width: 250px; }
-      .hero { min-height: 220px; }
+    @media (max-width:768px){
+      h1{font-size:28px}
+      .subtitle{font-size:16px}
+      .content{font-size:16.5px}
+      .cta a{font-size:18px;padding:14px 26px;min-width:220px}
+      .wrap{padding:14px 12px 22px}
     }
-    @media (max-width: 480px) {
-      h1 { font-size: 24px; }
-      .subtitle { font-size: 16px; }
-      .cta a { font-size: 18px; padding: 15px 22px; width: 100%; max-width: 280px; }
-      .footer a { display:inline-block; margin: 6px 8px; }
+
+    @media (max-width:480px){
+      h1{font-size:24px}
+      .cta a{width:100%;max-width:320px}
+      .footer a{display:inline-block;margin:6px 8px}
     }
   </style>
 </head>
 
 <body>
 
-  <!-- Sponsored disclosure -->
+  <!-- Compliance: MUST be visible immediately -->
   <div class="topbar">
     <strong>ADVERTISEMENT</strong> • This is a sponsored advertorial. This page is for informational purposes only and is not medical advice.
   </div>
+  <div class="sponsored-label">SPONSORED</div>
 
   <div class="wrap">
 
-    <!-- Hero image -->
     <div class="hero">
       <img src="assets/hero.png" alt="Plant-based ingredient" loading="lazy">
     </div>
 
     <div class="content">
       <h1>Why This Plant-Based Ingredient Is Getting Attention</h1>
+
       <p class="subtitle">
         A sponsored advertorial exploring a plant-based ingredient many people are learning about as part of everyday wellness routines.
       </p>
