--- a/index.html
+++ b/index.html
@@ -9,71 +9,67 @@
 
   <style>
     :root{
-      --bg:#0f2f28;
       --text:#111;
       --muted:#555;
       --btn:#2f7d32;
       --btn-hover:#1b5e20;
-      --accent:#4caf50;
-      --light-bg:#f6fff6;
+      --accent:#2f7d32;
+      --card:#f6fff6;
+      --border:#dfeee0;
     }
-
     *{box-sizing:border-box;margin:0;padding:0}
-
     body{
-      font-family:Arial,"Helvetica Neue",Helvetica,sans-serif;
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       background:#fff;
       color:var(--text);
       line-height:1.6;
     }
 
-    /* Top Bar - Compliance */
+    /* Compliance: always visible at top */
     .topbar{
       background:#f4f4f4;
-      padding:12px 15px;
+      padding:10px 12px;
       text-align:center;
-      font-size:14px;
+      font-size:13px;
       line-height:1.35;
       border-bottom:1px solid #ddd;
     }
     .topbar strong{color:#d32f2f}
 
-    /* SPONSORED label (must be visible in first fold) */
-    .sponsored-label{
-      width:100%;
+    /* Sponsored label (visible in first fold but not screaming) */
+    .sponsored{
+      background:#1f6b2a;
+      color:#fff;
       text-align:center;
       font-size:12px;
-      font-weight:700;
       letter-spacing:1px;
-      color:#fff;
-      background:#2f7d32;
+      font-weight:700;
       padding:6px 0;
       text-transform:uppercase;
     }
 
-    /* Container */
     .wrap{
       max-width:980px;
       margin:0 auto;
-      padding:18px 15px 26px;
+      padding:18px 15px 28px;
     }
 
-    /* Hero */
+    /* Hero: stable height + cover (no stretching) */
     .hero{
       border-radius:16px;
       overflow:hidden;
-      background:var(--bg);
+      background:#0f2f28;
       box-shadow:0 8px 20px rgba(0,0,0,.10);
       margin:12px 0 18px;
+      height:320px;
     }
     .hero img{
       width:100%;
-      height:auto;
-      display:block;
+      height:100%;
       object-fit:cover;
+      display:block;
     }
 
-    /* Content */
     .content{
       max-width:780px;
       margin:0 auto;
@@ -84,10 +80,9 @@
     h1{
       font-size:34px;
       line-height:1.2;
-      margin:8px 0 10px;
+      margin:10px 0 10px;
       text-align:center;
     }
-
     .subtitle{
       font-size:18px;
       color:var(--muted);
@@ -95,113 +90,90 @@
       margin:0 auto 22px;
       max-width:720px;
     }
+    p{margin:0 0 16px;color:var(--muted)}
 
-    p{
-      margin:0 0 16px;
-      color:var(--muted);
-    }
-
-    /* Info box */
     .info{
-      background:var(--light-bg);
-      border:1px solid #d9f3dc;
+      background:var(--card);
+      border:1px solid var(--border);
       border-left:4px solid var(--accent);
       border-radius:12px;
       padding:18px 18px;
       margin:18px 0 22px;
     }
-
     .info h2{
       font-size:20px;
       margin:0 0 10px;
       color:#0a261f;
     }
+    .info ul{padding-left:18px}
+    .info li{margin:8px 0;color:#2c2c2c}
 
-    .info ul{
-      padding-left:18px;
-      margin:0;
-    }
-    .info li{
-      margin:8px 0;
-      color:#2b2b2b;
-    }
-
-    /* CTA */
     .cta{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
+      text-align:center;
       margin:18px 0 18px;
-      gap:10px;
     }
-
     .cta a{
-      background:linear-gradient(to bottom,var(--btn),var(--btn-hover));
+      display:inline-block;
+      background:linear-gradient(to bottom, var(--btn), var(--btn-hover));
       color:#fff;
       text-decoration:none;
+      font-weight:700;
       font-size:20px;
       padding:16px 34px;
       border-radius:12px;
-      font-weight:700;
-      box-shadow:0 6px 0 #1b5e20,0 10px 20px rgba(43,124,47,.20);
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
+      box-shadow:0 6px 0 #1b5e20, 0 10px 20px rgba(43,124,47,.25);
+      transition:.2s ease;
       min-width:240px;
-      text-align:center;
     }
-    .cta a:hover{filter:brightness(1.05)}
+    .cta a:hover{transform:translateY(-2px)}
     .cta-note{
       font-size:12px;
       color:#666;
-      text-align:center;
-      max-width:650px;
+      margin-top:10px;
     }
 
     .disclaimer{
       font-size:13px;
       color:#777;
       text-align:left;
-      margin:22px 0;
+      margin:20px 0;
       padding:14px;
       background:#f9f9f9;
-      border-radius:8px;
+      border-radius:10px;
       border-left:3px solid #ccc;
     }
 
     hr{
       border:none;
       border-top:1px solid #e6e6e6;
-      margin:22px 0;
+      margin:20px 0;
     }
 
     .footer{
       font-size:14px;
       text-align:center;
-      padding:10px 0 16px;
+      padding:8px 0 16px;
       color:#666;
     }
     .footer a{
       color:#444;
       text-decoration:none;
-      margin:0 10px;
+      margin:0 8px;
     }
     .footer a:hover{text-decoration:underline;color:#000}
     .copyright{
       font-size:13px;
-      margin-top:14px;
+      margin-top:12px;
     }
 
-    /* Responsive */
     @media (max-width:768px){
+      .wrap{padding:14px 12px 24px}
+      .content{font-size:16.5px}
       h1{font-size:28px}
       .subtitle{font-size:16px}
-      .content{font-size:16.5px}
+      .hero{height:220px}
       .cta a{font-size:18px;padding:14px 26px;min-width:220px}
-      .wrap{padding:14px 12px 22px}
     }
-
     @media (max-width:480px){
       h1{font-size:24px}
       .cta a{width:100%;max-width:320px}
@@ -212,11 +184,10 @@
 
 <body>
 
-  <!-- Compliance: MUST be visible immediately -->
   <div class="topbar">
     <strong>ADVERTISEMENT</strong> • This is a sponsored advertorial. This page is for informational purposes only and is not medical advice.
   </div>
-  <div class="sponsored-label">SPONSORED</div>
+  <div class="sponsored">SPONSORED</div>
 
   <div class="wrap">
 
