--- a/index.html
+++ b/index.html
@@ -10,35 +10,30 @@
   <style>
     :root{
       --text:#111;
-      --muted:#556;
+      --muted:#555;
       --btn:#2f7d32;
       --btn-hover:#1b5e20;
-      --accent:#2f7d32;
       --card:#f6fff6;
       --border:#dfeee0;
-      --shadow: 0 10px 24px rgba(0,0,0,.10);
     }
-
     *{box-sizing:border-box;margin:0;padding:0}
     body{
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-family:Arial,Helvetica,sans-serif;
       background:#fff;
       color:var(--text);
       line-height:1.6;
     }
 
-    /* Compliance: always visible at top */
+    /* Compliance */
     .topbar{
       background:#f4f4f4;
       padding:10px 12px;
       text-align:center;
       font-size:13px;
-      line-height:1.35;
       border-bottom:1px solid #ddd;
     }
     .topbar strong{color:#d32f2f}
 
-    /* Sponsored label (visible in first fold but not screaming) */
     .sponsored{
       background:#1f6b2a;
       color:#fff;
@@ -56,170 +51,106 @@
       padding:18px 15px 28px;
     }
 
-    /* HERO (background image + fallback) */
+    /* HERO LIMPO */
     .hero{
       border-radius:16px;
       overflow:hidden;
-      background:#0f2f28;
-      box-shadow:var(--shadow);
-      margin:12px 0 18px;
-      height:320px;
-      position:relative;
-      background-image:url("assets/hero.png");
-      background-size:cover;
-      background-position:center;
-      background-repeat:no-repeat;
+      box-shadow:0 8px 20px rgba(0,0,0,.10);
+      margin:14px 0 22px;
     }
-    /* If image fails, we show this text */
-    .hero-fallback{
-      position:absolute;
-      inset:0;
-      display:flex;
-      align-items:flex-end;
-      padding:18px;
-      color:#eaf6ea;
-      background:linear-gradient(to top, rgba(0,0,0,.50), rgba(0,0,0,0));
-      font-size:14px;
-    }
-    .hero-fallback span{
-      background:rgba(0,0,0,.35);
-      padding:8px 10px;
-      border-radius:10px;
-      border:1px solid rgba(255,255,255,.15);
-      backdrop-filter: blur(4px);
+    .hero img{
+      width:100%;
+      height:auto;
+      display:block;
     }
 
     .content{
       max-width:780px;
       margin:0 auto;
-      margin-top:10px;
-      font-size:18px;
     }
 
     h1{
       font-size:34px;
-      line-height:1.15;
-      text-align:center;
-      margin:10px 0 10px;
+      margin-bottom:10px;
     }
 
     .subtitle{
-      text-align:center;
-      color:var(--muted);
-      font-size:17px;
-      margin:0 auto 18px;
-      max-width:640px;
-    }
-
-    .content p{
-      margin:0 0 14px;
+      font-size:18px;
+      color:#444;
+      margin-bottom:18px;
     }
 
     .info{
-      background:var(--card);
-      border:1px solid var(--border);
-      border-left:4px solid var(--accent);
-      border-radius:14px;
-      padding:16px 16px 14px;
-      margin:18px 0 18px;
-    }
-    .info h2{
-      font-size:18px;
-      margin-bottom:10px;
-    }
-    .info ul{
-      padding-left:18px;
-      color:#223;
-    }
-    .info li{
-      margin:6px 0;
+      background:#f6fff6;
+      border:1px solid #dfeee0;
+      border-radius:12px;
+      padding:18px;
+      margin:24px 0;
     }
 
     .cta{
       text-align:center;
-      margin:18px 0 10px;
+      margin:26px 0;
     }
     .cta a{
-      display:inline-block;
-      background:var(--btn);
+      background:#2f7d32;
       color:#fff;
       text-decoration:none;
-      font-weight:700;
       font-size:20px;
       padding:16px 34px;
-      border-radius:14px;
-      box-shadow:0 10px 18px rgba(47,125,50,.18);
-      min-width:260px;
+      border-radius:40px;
+      display:inline-block;
+      font-weight:700;
     }
-    .cta a:hover{background:var(--btn-hover)}
+    .cta a:hover{background:#1b5e20}
+
     .cta-note{
-      margin-top:10px;
       font-size:12px;
-      color:#6b7280;
+      color:#666;
+      margin-top:10px;
     }
 
     .disclaimer{
       font-size:13px;
       color:#777;
-      text-align:left;
-      margin:20px 0;
+      margin:22px 0;
       padding:14px;
       background:#f9f9f9;
       border-radius:10px;
       border-left:3px solid #ccc;
     }
 
-    hr{
-      border:none;
-      border-top:1px solid #e6e6e6;
-      margin:20px 0;
-    }
-
     .footer{
-      font-size:14px;
       text-align:center;
-      padding:8px 0 16px;
+      font-size:14px;
       color:#666;
+      margin-top:24px;
     }
     .footer a{
       color:#444;
       text-decoration:none;
       margin:0 8px;
     }
-    .footer a:hover{text-decoration:underline;color:#000}
-    .copyright{
-      font-size:13px;
-      margin-top:12px;
-    }
 
-    /* Responsive */
-    @media (max-width:768px){
-      .wrap{padding:14px 12px 24px}
-      .content{font-size:16.5px}
+    @media(max-width:768px){
       h1{font-size:28px}
       .subtitle{font-size:16px}
-      .hero{height:220px}
-      .cta a{font-size:18px;padding:14px 26px;min-width:220px}
-    }
-    @media (max-width:480px){
-      h1{font-size:24px}
-      .cta a{width:100%;max-width:340px}
-      .footer a{display:inline-block;margin:6px 8px}
     }
   </style>
 </head>
 
 <body>
+
   <div class="topbar">
     <strong>ADVERTISEMENT</strong> • This is a sponsored advertorial. This page is for informational purposes only and is not medical advice.
   </div>
+
   <div class="sponsored">SPONSORED</div>
 
   <div class="wrap">
-    <div class="hero" role="img" aria-label="Plant-based ingredient hero image">
-      <div class="hero-fallback">
-        <span>Plant-based ingredient</span>
-      </div>
+
+    <div class="hero">
+      <img src="assets/hero.png" alt="Plant-based ingredient">
     </div>
 
     <div class="content">
@@ -230,50 +161,40 @@
       </p>
 
       <p>
-        More Americans are exploring simple, plant-based approaches that fit into a balanced lifestyle. Rather than chasing extreme promises,
-        many people prefer to start with basic habits and ingredients that feel easy to understand.
-      </p>
-
-      <p>
-        This page is a brief overview designed to help readers learn about one plant-based ingredient that has been gaining curiosity online.
-        If you'd like the full details, you can click below to learn more.
+        More Americans are exploring simple, plant-based approaches that fit into a balanced lifestyle.
       </p>
 
       <div class="info">
         <h2>What This Page Covers</h2>
         <ul>
-          <li>A general overview of a plant-based ingredient people are discussing</li>
-          <li>How readers are thinking about it within a wellness routine</li>
-          <li>Where to find more information if you want to explore further</li>
+          <li>General overview of a plant-based ingredient</li>
+          <li>How readers think about it in wellness routines</li>
+          <li>Where to learn more</li>
         </ul>
       </div>
 
       <div class="cta">
-        <a href="https://482a29j3raz6sr8ajjq45ney81.hop.clickbank.net" target="_blank" rel="noopener noreferrer">
+        <a href="https://482a29j3raz6sr8ajjq45ney81.hop.clickbank.net" target="_blank">
           Learn More
         </a>
         <div class="cta-note">
-          Individual experiences vary. For personal guidance, consult a qualified professional.
+          Individual experiences vary. Consult a qualified professional.
         </div>
       </div>
 
       <div class="disclaimer">
-        <strong>Disclaimer:</strong> This advertorial is for informational purposes only and does not diagnose, treat, cure, or prevent any disease.
-        Always consult a qualified professional before making changes to your routine. Results vary.
+        This advertorial is for informational purposes only and does not diagnose, treat, cure, or prevent any disease.
       </div>
-
-      <hr>
 
       <div class="footer">
         <a href="privacy.html">Privacy Policy</a> |
         <a href="terms.html">Terms of Use</a> |
         <a href="contact.html">Contact</a> |
         <a href="disclaimer.html">Disclaimer</a>
-        <div class="copyright">
-          © 2025 Plant-Based Wellness. All rights reserved.
-        </div>
+        <div>© 2025 Plant-Based Wellness</div>
       </div>
     </div>
+
   </div>
 </body>
 </html>
