--- a/index.html
+++ b/index.html
@@ -51,17 +51,26 @@
       padding:18px 15px 28px;
     }
 
-    /* HERO LIMPO */
+    /* HERO */
     .hero{
       border-radius:16px;
       overflow:hidden;
       box-shadow:0 8px 20px rgba(0,0,0,.10);
       margin:14px 0 22px;
+      border:1px solid #eee;
+      background:#f5f5f5;
     }
     .hero img{
       width:100%;
       height:auto;
       display:block;
+    }
+    .hero-fallback{
+      display:none;
+      padding:26px 18px;
+      text-align:center;
+      color:#444;
+      font-weight:700;
     }
 
     .content{
@@ -74,18 +83,28 @@
       margin-bottom:10px;
     }
 
+    /* FIX: subtitle estava quebrado no teu código */
     .subtitle{
-      font-size:18px;
       color:#444;
       margin-bottom:18px;
+      font-size:18px;
     }
 
+    p{ color:#222; }
+
     .info{
-      background:#f6fff6;
-      border:1px solid #dfeee0;
+      background:var(--card);
+      border:1px solid var(--border);
       border-radius:12px;
       padding:18px;
       margin:24px 0;
+    }
+    .info h2{
+      font-size:20px;
+      margin-bottom:10px;
+    }
+    .info ul{
+      padding-left:18px;
     }
 
     .cta{
@@ -93,7 +112,7 @@
       margin:26px 0;
     }
     .cta a{
-      background:#2f7d32;
+      background:var(--btn);
       color:#fff;
       text-decoration:none;
       font-size:20px;
@@ -102,7 +121,7 @@
       display:inline-block;
       font-weight:700;
     }
-    .cta a:hover{background:#1b5e20}
+    .cta a:hover{background:var(--btn-hover)}
 
     .cta-note{
       font-size:12px;
@@ -135,6 +154,7 @@
     @media(max-width:768px){
       h1{font-size:28px}
       .subtitle{font-size:16px}
+      .cta a{font-size:18px;padding:14px 26px}
     }
   </style>
 </head>
@@ -150,7 +170,12 @@
   <div class="wrap">
 
     <div class="hero">
-      <img src="assets/hero.png" alt="Plant-based ingredient">
+      <!-- IMAGEM: precisa existir em /assets/hero.png -->
+      <img id="heroImg" src="assets/hero.png" alt="Plant-based ingredient"
+           onerror="document.getElementById('heroFallback').style.display='block'; this.style.display='none';" />
+      <div id="heroFallback" class="hero-fallback">
+        Sponsored advertorial (image unavailable)
+      </div>
     </div>
 
     <div class="content">
@@ -174,7 +199,7 @@
       </div>
 
       <div class="cta">
-        <a href="https://482a29j3raz6sr8ajjq45ney81.hop.clickbank.net" target="_blank">
+        <a id="ctaLink" href="#" target="_blank" rel="noopener noreferrer">
           Learn More
         </a>
         <div class="cta-note">
@@ -196,5 +221,18 @@
     </div>
 
   </div>
+
+  <script>
+    // ✅ COLE AQUI O TEU HOPLINK FINAL (com tracking)
+    // Se você já tem aquele da ClickBank com traffic_source/campaign, cola inteiro aqui.
+    const HOPLINK =
+      "https://482a29j3raz6sr8ajjq45ney81.hop.clickbank.net/?" +
+      "traffic_source=revcontent&traffic_type=native&campaign=cb_berberine_us_mobile_v1&creative=hero&ad=learnmore";
+
+    document.getElementById("ctaLink").href = HOPLINK;
+  </script>
+
 </body>
 </html>
+
+   
