--- a/index.html
+++ b/index.html
@@ -51,33 +51,6 @@
       padding:18px 15px 28px;
     }
 
-    /* HERO (AJUSTADO) */
-    .hero{
-      border-radius:16px;
-      overflow:hidden;
-      box-shadow:0 8px 20px rgba(0,0,0,.10);
-      margin:14px 0 22px;
-      border:1px solid #eee;
-      background:#f5f5f5;
-
-      /* controla o “tamanho aparente” */
-      max-height:320px;      /* desktop */
-    }
-    .hero img{
-      width:100%;
-      height:320px;          /* casa com o max-height do container */
-      display:block;
-      object-fit:cover;      /* corta sem distorcer */
-      object-position:center;
-    }
-    .hero-fallback{
-      display:none;
-      padding:26px 18px;
-      text-align:center;
-      color:#444;
-      font-weight:700;
-    }
-
     .content{
       max-width:780px;
       margin:0 auto;
@@ -87,11 +60,44 @@
       font-size:34px;
       margin-bottom:10px;
     }
-
     .subtitle{
+      font-size:17px;
       color:#444;
       margin-bottom:18px;
-      font-size:18px;
+    }
+
+    /* HERO (BAIXO / SEM CORTAR / CONTROLADO) */
+    .hero{
+      max-width:780px;
+      width:100%;
+      margin:14px auto 18px;
+
+      border-radius:16px;
+      overflow:hidden;
+      box-shadow:0 8px 20px rgba(0,0,0,.10);
+      border:1px solid #eee;
+      background:#f5f5f5;
+
+      /* altura controlada */
+      aspect-ratio: 16 / 5;   /* bem mais “baixo” */
+      max-height: 220px;      /* trava pra não ficar enorme */
+    }
+    .hero img{
+      width:100%;
+      height:100%;
+      display:block;
+      object-fit:contain;      /* mostra tudo */
+      object-position:center;
+    }
+    .hero-fallback{
+      display:none;
+      height:100%;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      color:#444;
+      font-weight:700;
+      padding:18px;
     }
 
     .info{
@@ -99,12 +105,15 @@
       border:1px solid var(--border);
       border-radius:12px;
       padding:18px;
-      margin:24px 0;
+      margin:18px 0 22px;
     }
+    .info h2{font-size:18px;margin-bottom:10px}
+    .info ul{padding-left:18px}
+    .info li{margin:6px 0;color:#222}
 
     .cta{
       text-align:center;
-      margin:26px 0;
+      margin:18px 0 18px;
     }
     .cta a{
       background:var(--btn);
@@ -117,7 +126,6 @@
       font-weight:700;
     }
     .cta a:hover{background:var(--btn-hover)}
-
     .cta-note{
       font-size:12px;
       color:#666;
@@ -127,7 +135,7 @@
     .disclaimer{
       font-size:13px;
       color:#777;
-      margin:22px 0;
+      margin:18px 0;
       padding:14px;
       background:#f9f9f9;
       border-radius:10px;
@@ -138,7 +146,7 @@
       text-align:center;
       font-size:14px;
       color:#666;
-      margin-top:24px;
+      margin-top:22px;
     }
     .footer a{
       color:#444;
@@ -151,9 +159,11 @@
       .subtitle{font-size:16px}
       .cta a{font-size:18px;padding:14px 26px}
 
-      /* HERO menor no mobile */
-      .hero{ max-height:220px; }
-      .hero img{ height:220px; }
+      /* no mobile deixa um pouco mais alto */
+      .hero{
+        aspect-ratio: 16 / 6;
+        max-height: 200px;
+      }
     }
   </style>
 </head>
@@ -170,7 +180,7 @@
 
     <div class="hero">
       <img id="heroImg" src="assets/hero.png" alt="Plant-based ingredient"
-           onerror="document.getElementById('heroFallback').style.display='block'; this.style.display='none';" />
+           onerror="document.getElementById('heroFallback').style.display='flex'; this.style.display='none';" />
       <div id="heroFallback" class="hero-fallback">
         Sponsored advertorial (image unavailable)
       </div>
@@ -197,12 +207,8 @@
       </div>
 
       <div class="cta">
-        <a id="ctaLink" href="#" target="_blank" rel="noopener noreferrer">
-          Learn More
-        </a>
-        <div class="cta-note">
-          Individual experiences vary. Consult a qualified professional.
-        </div>
+        <a id="ctaLink" href="#" target="_blank" rel="noopener noreferrer">Learn More</a>
+        <div class="cta-note">Individual experiences vary. Consult a qualified professional.</div>
       </div>
 
       <div class="disclaimer">
