--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       --btn-hover:#1b5e20;
       --card:#f6fff6;
       --border:#dfeee0;
+      --shadow:0 8px 20px rgba(0,0,0,.10);
     }
     *{box-sizing:border-box;margin:0;padding:0}
     body{
@@ -50,7 +51,6 @@
       margin:0 auto;
       padding:18px 15px 28px;
     }
-
     .content{
       max-width:780px;
       margin:0 auto;
@@ -58,7 +58,7 @@
 
     h1{
       font-size:34px;
-      margin-bottom:10px;
+      margin:8px 0 10px;
     }
     .subtitle{
       font-size:17px;
@@ -66,38 +66,70 @@
       margin-bottom:18px;
     }
 
-    /* HERO (BAIXO / SEM CORTAR / CONTROLADO) */
+    /* HERO 2-COLUNAS (texto + imagem) */
     .hero{
       max-width:780px;
-      width:100%;
       margin:14px auto 18px;
-
       border-radius:16px;
       overflow:hidden;
-      box-shadow:0 8px 20px rgba(0,0,0,.10);
+      box-shadow:var(--shadow);
       border:1px solid #eee;
       background:#f5f5f5;
-
-      /* altura controlada */
-      aspect-ratio: 16 / 5;   /* bem mais “baixo” */
-      max-height: 220px;      /* trava pra não ficar enorme */
+      display:grid;
+      grid-template-columns: 1.05fr 1fr;
+      min-height:220px;
     }
-    .hero img{
+
+    .hero-left{
+      padding:18px;
+      display:flex;
+      align-items:center;
+      background:#fff;
+    }
+    .hero-badge{
+      background:#1b1b1b;
+      color:#fff;
+      padding:10px 12px;
+      border-radius:10px;
+      max-width:340px;
+    }
+    .hero-badge .ttl{
+      font-weight:800;
+      letter-spacing:.6px;
+      font-size:16px;
+      line-height:1.1;
+      margin-bottom:6px;
+    }
+    .hero-badge .sub{
+      font-size:13px;
+      opacity:.92;
+      line-height:1.35;
+    }
+
+    .hero-right{
+      position:relative;
+      background:#e9e9e9;
+      min-height:220px;
+    }
+    .hero-right img{
       width:100%;
       height:100%;
       display:block;
-      object-fit:contain;      /* mostra tudo */
-      object-position:center;
+      object-fit:cover;          /* <-- deixa bonito sem distorcer */
+      object-position:center;    /* pode mudar para "right center" se quiser */
     }
+
     .hero-fallback{
+      position:absolute;
+      inset:0;
       display:none;
-      height:100%;
       align-items:center;
       justify-content:center;
       text-align:center;
+      padding:18px;
       color:#444;
       font-weight:700;
-      padding:18px;
+      background:#f5f5f5;
     }
 
     .info{
@@ -105,15 +137,23 @@
       border:1px solid var(--border);
       border-radius:12px;
       padding:18px;
-      margin:18px 0 22px;
+      margin:20px 0;
     }
-    .info h2{font-size:18px;margin-bottom:10px}
-    .info ul{padding-left:18px}
-    .info li{margin:6px 0;color:#222}
+    .info h2{
+      font-size:18px;
+      margin-bottom:10px;
+    }
+    .info ul{
+      padding-left:18px;
+    }
+    .info li{
+      margin:6px 0;
+      color:#222;
+    }
 
     .cta{
       text-align:center;
-      margin:18px 0 18px;
+      margin:22px 0;
     }
     .cta a{
       background:var(--btn);
@@ -154,15 +194,20 @@
       margin:0 8px;
     }
 
+    /* Responsivo */
     @media(max-width:768px){
       h1{font-size:28px}
       .subtitle{font-size:16px}
       .cta a{font-size:18px;padding:14px 26px}
 
-      /* no mobile deixa um pouco mais alto */
       .hero{
-        aspect-ratio: 16 / 6;
-        max-height: 200px;
+        grid-template-columns: 1fr;
+      }
+      .hero-left{
+        justify-content:center;
+      }
+      .hero-right{
+        min-height:200px;
       }
     }
   </style>
@@ -178,11 +223,21 @@
 
   <div class="wrap">
 
+    <!-- HERO (texto à esquerda + imagem à direita) -->
     <div class="hero">
-      <img id="heroImg" src="assets/hero.png" alt="Plant-based ingredient"
-           onerror="document.getElementById('heroFallback').style.display='flex'; this.style.display='none';" />
-      <div id="heroFallback" class="hero-fallback">
-        Sponsored advertorial (image unavailable)
+      <div class="hero-left">
+        <div class="hero-badge">
+          <div class="ttl">ADVERTISEMENT</div>
+          <div class="sub">Sponsored advertorial — learn more inside.</div>
+        </div>
+      </div>
+
+      <div class="hero-right">
+        <img id="heroImg" src="assets/hero.png" alt="Plant-based ingredient"
+             onerror="document.getElementById('heroFallback').style.display='flex'; this.style.display='none';" />
+        <div id="heroFallback" class="hero-fallback">
+          Sponsored advertorial (image unavailable)
+        </div>
       </div>
     </div>
 
