--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     h1{
       font-size:34px;
-      margin:8px 0 10px;
+      margin:10px 0 10px;
     }
     .subtitle{
       font-size:17px;
@@ -66,94 +66,97 @@
       margin-bottom:18px;
     }
 
-    /* HERO 2-COLUNAS (texto + imagem) */
+    /* HERO (DESKTOP = 2 colunas | MOBILE = overlay) */
     .hero{
       max-width:780px;
-      margin:14px auto 18px;
+      margin:12px auto 18px;
       border-radius:16px;
       overflow:hidden;
       box-shadow:var(--shadow);
-      border:1px solid #eee;
-      background:#f5f5f5;
+      background:#fff;
+
       display:grid;
-      grid-template-columns: 1.05fr 1fr;
+      grid-template-columns: 1fr 1fr;
       min-height:220px;
     }
 
     .hero-left{
-      padding:18px;
+      background:#fff;
       display:flex;
       align-items:center;
-      background:#fff;
+      justify-content:flex-start;
+      padding:22px;
     }
+
     .hero-badge{
-      background:#1b1b1b;
+      background:#111;
       color:#fff;
-      padding:10px 12px;
+      padding:14px 18px;
       border-radius:10px;
-      max-width:340px;
+      max-width:320px;
     }
     .hero-badge .ttl{
       font-weight:800;
-      letter-spacing:.6px;
-      font-size:16px;
-      line-height:1.1;
-      margin-bottom:6px;
+      letter-spacing:.5px;
+      font-size:18px;
+      margin-bottom:4px;
     }
     .hero-badge .sub{
       font-size:13px;
-      opacity:.92;
+      opacity:.95;
       line-height:1.35;
     }
 
     .hero-right{
       position:relative;
-      background:#e9e9e9;
+      background:#f3f3f3;
       min-height:220px;
     }
+
     .hero-right img{
       width:100%;
       height:100%;
+      object-fit:cover;
       display:block;
-      object-fit:cover;          /* <-- deixa bonito sem distorcer */
-      object-position:center;    /* pode mudar para "right center" se quiser */
     }
 
     .hero-fallback{
+      display:none;
       position:absolute;
       inset:0;
-      display:none;
       align-items:center;
       justify-content:center;
       text-align:center;
       padding:18px;
       color:#444;
       font-weight:700;
-      background:#f5f5f5;
+      background:#f3f3f3;
     }
 
+    /* INFO BOX */
     .info{
       background:var(--card);
       border:1px solid var(--border);
       border-radius:12px;
       padding:18px;
-      margin:20px 0;
+      margin:18px 0 10px;
     }
     .info h2{
       font-size:18px;
       margin-bottom:10px;
     }
     .info ul{
-      padding-left:18px;
+      margin-left:18px;
     }
     .info li{
       margin:6px 0;
       color:#222;
     }
 
+    /* CTA */
     .cta{
       text-align:center;
-      margin:22px 0;
+      margin:18px 0 8px;
     }
     .cta a{
       background:var(--btn);
@@ -194,7 +197,7 @@
       margin:0 8px;
     }
 
-    /* Responsivo */
+    /* ✅ MOBILE: vira 1 coluna e a badge fica POR CIMA da imagem */
     @media(max-width:768px){
       h1{font-size:28px}
       .subtitle{font-size:16px}
@@ -202,12 +205,32 @@
 
       .hero{
         grid-template-columns: 1fr;
+        min-height:unset;
       }
+
+      /* some com a coluna branca e vira overlay */
       .hero-left{
-        justify-content:center;
+        position:absolute;
+        z-index:3;
+        background:transparent;
+        padding:14px;
+        width:100%;
+        justify-content:flex-start;
       }
+
+      .hero-badge{
+        background:rgba(0,0,0,.75);
+        max-width:unset;
+      }
+      .hero-badge .ttl{font-size:16px}
+      .hero-badge .sub{font-size:12px}
+
       .hero-right{
-        min-height:200px;
+        min-height:210px;
+      }
+
+      .hero-right img{
+        height:210px; /* controla a altura no celular */
       }
     }
   </style>
@@ -223,7 +246,7 @@
 
   <div class="wrap">
 
-    <!-- HERO (texto à esquerda + imagem à direita) -->
+    <!-- HERO -->
     <div class="hero">
       <div class="hero-left">
         <div class="hero-badge">
