--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>Plant-Based Wellness | Sponsored Advertorial</title>
-  <meta name="description" content="A sponsored advertorial exploring a plant-based ingredient many people are learning about as part of everyday wellness routines." />
+  <title>Informational Advertorial | Sponsored</title>
+  <meta name="description" content="An informational sponsored advertorial providing general background on a plant-based ingredient." />
 
-  <!-- Link preview (use ABSOLUTE URLs) -->
-  <meta property="og:title" content="Plant-Based Wellness | Sponsored Advertorial" />
-  <meta property="og:description" content="A sponsored advertorial exploring a plant-based ingredient many people are learning about as part of everyday wellness routines." />
-  <meta property="og:image" content="https://cuticarashop.github.io/pressel-plant-us-/assets/berberine-bg-1200x628.png" />
+  <!-- Link preview (ABSOLUTE URLs) -->
+  <meta property="og:title" content="Informational Advertorial | Sponsored" />
+  <meta property="og:description" content="An informational sponsored advertorial providing general background on a plant-based ingredient." />
+  <meta property="og:image" content="https://cuticarashop.github.io/pressel-plant-us-/assets/plant-based-hero.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://cuticarashop.github.io/pressel-plant-us-/assets/berberine-bg-1200x628.png" />
+  <meta name="twitter:image" content="https://cuticarashop.github.io/pressel-plant-us-/assets/plant-based-hero.jpg" />
 
   <style>
     :root{
@@ -21,17 +21,20 @@
       --btn:#2f7d32;
       --btn-hover:#1b5e20;
       --shadow:0 8px 20px rgba(0,0,0,.10);
-      --soft:#f9f9f9;
+      --soft:#f7f7f7;
+      --border:#e9e9e9;
     }
+
     *{box-sizing:border-box;margin:0;padding:0}
+
     body{
-      font-family:Arial,Helvetica,sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
       background:#fff;
       color:var(--text);
       line-height:1.6;
     }
 
-    /* Compliance */
+    /* Compliance bars */
     .topbar{
       background:#f4f4f4;
       padding:10px 12px;
@@ -40,6 +43,7 @@
       border-bottom:1px solid #ddd;
     }
     .topbar strong{color:#d32f2f}
+
     .sponsored{
       background:#1f6b2a;
       color:#fff;
@@ -56,15 +60,45 @@
       margin:0 auto;
       padding:18px 15px 28px;
     }
+
     .content{
       max-width:780px;
       margin:0 auto;
     }
 
-    h1{font-size:34px;margin:10px 0 10px}
-    .subtitle{font-size:17px;color:#444;margin-bottom:18px}
+    /* Strong disclosure block (helps Missing Disclosures) */
+    .disclosure{
+      max-width:780px;
+      margin:12px auto 14px;
+      padding:12px 14px;
+      background:var(--soft);
+      border:1px solid var(--border);
+      border-radius:12px;
+      font-size:13px;
+      color:#222;
+    }
+    .disclosure b{font-weight:700}
 
-    /* HERO (só imagem, sem texto) */
+    /* Publisher label (helps Brand Name consistency) */
+    .publisher{
+      margin:10px 0 0;
+      font-size:13px;
+      color:var(--muted);
+    }
+
+    h1{
+      font-size:32px;
+      margin:10px 0 10px;
+      line-height:1.25;
+    }
+
+    .subtitle{
+      font-size:16px;
+      color:#444;
+      margin-bottom:14px;
+    }
+
+    /* HERO */
     .hero{
       max-width:780px;
       margin:12px auto 18px;
@@ -72,38 +106,46 @@
       overflow:hidden;
       box-shadow:var(--shadow);
       background:#fff;
+      border:1px solid #eee;
     }
     .hero img{
-      display:block;
       width:100%;
       height:260px;
       object-fit:cover;
+      display:block;
     }
     .hero-fallback{
       display:none;
       padding:18px;
       text-align:center;
-      font-size:13px;
       color:#333;
-      background:var(--soft);
-      border:1px solid #eee;
+      background:#fafafa;
+      font-size:13px;
     }
 
+    /* Info box */
     .info{
-      margin:18px 0;
-      padding:14px;
-      background:var(--soft);
-      border:1px solid #eee;
-      border-radius:10px;
-      font-size:14px;
+      margin:16px 0 18px;
+      padding:14px 14px;
+      background:#fafafa;
+      border:1px solid var(--border);
+      border-radius:12px;
     }
-    .info h2{font-size:16px;margin-bottom:8px}
-    .info ul{padding-left:18px}
+    .info h2{
+      font-size:15px;
+      margin-bottom:8px;
+    }
+    .info ul{
+      padding-left:18px;
+      font-size:14px;
+      color:#222;
+    }
     .info li{margin:6px 0}
 
+    /* CTA */
     .cta{
       text-align:center;
-      margin:18px 0 8px;
+      margin:18px 0 10px;
     }
     .cta a{
       display:inline-block;
@@ -122,17 +164,31 @@
       margin-top:10px;
     }
 
-    .disclaimer{
+    /* Extra disclosure near CTA (helps Missing Disclosures) */
+    .cta-disclosure{
+      margin:10px auto 0;
+      max-width:680px;
+      font-size:12px;
+      color:#333;
+      background:var(--soft);
+      border:1px solid var(--border);
+      border-radius:10px;
+      padding:10px 12px;
+      text-align:center;
+    }
+
+    .medical{
       font-size:13px;
-      margin:20px 0;
+      margin:18px 0;
       padding:12px;
       background:var(--soft);
       border-radius:10px;
-      border:1px solid #eee;
+      border:1px solid var(--border);
+      color:#222;
     }
 
     .footer{
-      margin-top:24px;
+      margin-top:22px;
       font-size:13px;
       color:var(--muted);
       text-align:center;
@@ -140,8 +196,8 @@
     .footer a{color:var(--btn);text-decoration:none;}
 
     @media (max-width:768px){
-      h1{font-size:28px}
-      .subtitle{font-size:16px}
+      h1{font-size:26px}
+      .subtitle{font-size:15px}
       .hero img{height:210px}
       .cta a{font-size:18px;padding:14px 26px}
     }
@@ -158,12 +214,18 @@
 
   <div class="wrap">
 
+    <!-- Strong disclosure (important for Revcontent) -->
+    <div class="disclosure">
+      <b>Disclosure:</b> This page is a paid advertisement (sponsored advertorial) created for informational purposes only.
+      It does not provide medical advice.
+    </div>
+
     <!-- HERO -->
     <div class="hero">
       <img
         id="heroImg"
-        src="assets/berberine-bg-1200x628.png"
-        alt="Plant-based ingredient"
+        src="assets/plant-based-hero.jpg"
+        alt="Plant-based ingredient (illustrative image)"
         loading="eager"
         fetchpriority="high"
         decoding="async"
@@ -175,32 +237,38 @@
     </div>
 
     <div class="content">
-      <h1>Why This Plant-Based Ingredient Is Getting Attention</h1>
+      <div class="publisher">Publisher: <b>Health Insider</b></div>
+
+      <h1>An Informational Look at a Plant-Based Ingredient</h1>
 
       <p class="subtitle">
-        A sponsored advertorial exploring a plant-based ingredient many people are learning about as part of everyday wellness routines.
+        This sponsored advertorial provides general background information and links to where you can learn more.
       </p>
 
       <p>
-        More people are exploring simple, plant-based approaches that fit into a balanced lifestyle.
-        This page shares general information and points to where you can learn more.
+        People often explore different lifestyle approaches as part of everyday wellness. This page shares general,
+        non-medical information and points to additional resources.
       </p>
 
       <div class="info">
         <h2>What This Page Covers</h2>
         <ul>
-          <li>General overview of a plant-based ingredient</li>
-          <li>How readers think about it in wellness routines</li>
-          <li>Where to learn more</li>
+          <li>General background and context</li>
+          <li>Common ways people discuss wellness routines</li>
+          <li>Where to learn more (external site)</li>
         </ul>
       </div>
 
       <div class="cta">
         <a id="ctaLink" href="#" target="_blank" rel="noopener noreferrer">Learn More</a>
-        <div class="cta-note">Individual experiences vary. Consult a qualified professional.</div>
+        <div class="cta-note">Individual experiences vary. Consult a qualified professional for personal guidance.</div>
+
+        <div class="cta-disclosure">
+          <b>Sponsored:</b> Clicking “Learn More” will take you to an external website.
+        </div>
       </div>
 
-      <div class="disclaimer">
+      <div class="medical">
         This advertorial is for informational purposes only and does not diagnose, treat, cure, or prevent any disease.
       </div>
 
@@ -209,7 +277,7 @@
         <a href="terms.html">Terms of Use</a> |
         <a href="contact.html">Contact</a> |
         <a href="disclaimer.html">Disclaimer</a>
-        <div>© 2025 Sponsored Wellness Content</div>
+        <div>© 2025 Health Insider</div>
       </div>
     </div>
 
@@ -220,7 +288,7 @@
       "https://482a29j3raz6sr8ajjq45ney81.hop.clickbank.net/?" +
       "traffic_source=revcontent&traffic_type=native" +
       "&campaign=cb_berberine_us_mobile_v1" +
-      "&creative=bg_1200x628" +
+      "&creative=plant_based_hero" +
       "&ad=learnmore";
 
     document.getElementById("ctaLink").href = HOPLINK;
@@ -228,3 +296,5 @@
 
 </body>
 </html>
+
+
